优化一些功能

--- a/Redis.properties
+++ b/Redis.properties
@@ -1,19 +1,11 @@
-#Update 'maxid' value
-#Fri Sep 09 16:09:20 CST 2016
-password5=
-password4=
+#Delete 'password5' value
+#Thu Oct 13 17:31:16 CST 2016
 password3=
-password2=
-name5=\u4F60\u597D
-port5=6379
-name4=\u4F60\u597D
-maxid=5
-port4=6379
+name7=.8
+port7=6379
+maxid=7
 name3=127.0.0.1
+ip7=192.168.0.8
 port3=6379
-name2=\u4F60\u597D
-ip5=192.168.0.1
-port2=6379
-ip4=192.168.0.8
 ip3=127.0.0.1
-ip2=192.168.0.36
+password7=
