增加底部工具栏

--- a/runtime/Redis.properties
+++ b/runtime/Redis.properties
@@ -1,11 +1,11 @@
-#Delete 'password5' value
-#Thu Oct 13 17:31:16 CST 2016
+#Update 'password7' value
+#Sat Oct 15 21:46:11 CST 2016
 password3=
 name7=.8
 port7=6379
 maxid=7
 name3=127.0.0.1
-ip7=192.168.0.8
+ip7=127.0.0.1
 port3=6379
 ip3=127.0.0.1
 password7=
